// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chrome renders correctly 1`] = `
<DocumentFragment>
  <div
    class="chrome-picker "
    style="width: 225px; background: rgb(255, 255, 255); -webkit-border-radius: 2px; border-radius: 2px; -webkit-box-shadow: 0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3); box-shadow: 0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3); box-sizing: initial; font-family: Menlo;"
  >
    <div
      style="width: 100%; padding-bottom: 55%; position: relative; -webkit-border-radius: 2px 2px 0 0; border-radius: 2px 2px 0 0; overflow: hidden;"
    >
      <div
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: rgb(43, 0, 255);"
      >
        <style>
          
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
        </style>
        <div
          class="saturation-white"
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
        >
          <div
            class="saturation-black"
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
          <div
            style="position: absolute; top: 70%; left: 66.66666666666667%; cursor: default;"
          >
            <div
              style="width: 12px; height: 12px; -webkit-border-radius: 6px; border-radius: 6px; -webkit-box-shadow: inset 0 0 0 1px #fff; box-shadow: inset 0 0 0 1px #fff; -webkit-transform: translate(-6px, -6px); transform: translate(-6px, -6px);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding: 16px 16px 12px;"
    >
      <div
        class="flexbox-fix"
        style="display: flex;"
      >
        <div
          style="width: 32px;"
        >
          <div
            style="margin-top: 6px; width: 16px; height: 16px; -webkit-border-radius: 8px; border-radius: 8px; position: relative; overflow: hidden;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; -webkit-border-radius: 8px; border-radius: 8px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.1); box-shadow: inset 0 0 0 1px rgba(0,0,0,.1); background: rgb(34, 25, 77); z-index: 2;"
            />
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url("null");"
            />
          </div>
        </div>
        <div
          style="flex: 1 1 0%;"
        >
          <div
            style="height: 10px; position: relative; margin-bottom: 8px;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <div
                class="hue-horizontal"
                style="padding: 0px 2px; position: relative; height: 100%;"
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style="position: absolute; left: 69.44444444444443%;"
                >
                  <div
                    style="width: 12px; height: 12px; -webkit-border-radius: 6px; border-radius: 6px; -webkit-transform: translate(-6px, -1px); transform: translate(-6px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            style="height: 10px; position: relative;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <div
                style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; overflow: hidden;"
              >
                <div
                  style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url("null");"
                />
              </div>
              <div
                style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: linear-gradient(to right, rgba(34, 25, 77, 0) 0%, rgb(34, 25, 77) 100%);"
              />
              <div
                style="position: relative; height: 100%; margin: 0px 3px;"
              >
                <div
                  style="position: absolute; left: 100%;"
                >
                  <div
                    style="width: 12px; height: 12px; -webkit-border-radius: 6px; border-radius: 6px; -webkit-transform: translate(-6px, -1px); transform: translate(-6px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flexbox-fix"
        style="padding-top: 16px; display: flex;"
      >
        <div
          class="flexbox-fix"
          style="flex: 1 1 0%; display: flex; margin-left: -6px;"
        >
          <div
            style="padding-left: 6px; width: 100%;"
          >
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-1"
                spellcheck="false"
                style="font-size: 11px; color: rgb(51, 51, 51); width: 100%; -webkit-border-radius: 2px; border-radius: 2px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #dadada; box-shadow: inset 0 0 0 1px #dadada; height: 21px; text-align: center;"
                value="#22194D"
              />
              <label
                for="rc-editable-input-1"
                style="text-transform: uppercase; font-size: 11px; line-height: 11px; color: rgb(150, 150, 150); text-align: center; display: block; margin-top: 12px;"
              >
                hex
              </label>
            </div>
          </div>
        </div>
        <div
          style="width: 32px; text-align: right; position: relative;"
        >
          <div
            style="margin-right: -4px; margin-top: 12px; cursor: pointer; position: relative;"
          >
            <svg
              style="fill: rgb(51, 51, 51); width: 24px; height: 24px; border: 1px solid transparent; -webkit-border-radius: 5px; border-radius: 5px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,18.17L8.83,15L7.42,16.41L12,21L16.59,16.41L15.17,15M12,5.83L15.17,9L16.58,7.59L12,3L7.41,7.59L8.83,9L12,5.83Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChromeFields renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flexbox-fix"
    style="padding-top: 16px; display: flex;"
  >
    <div
      class="flexbox-fix"
      style="flex: 1 1 0%; display: flex; margin-left: -6px;"
    >
      <div
        style="padding-left: 6px; width: 100%;"
      >
        <div
          style="position: relative;"
        >
          <input
            id="rc-editable-input-3"
            spellcheck="false"
            style="font-size: 11px; color: rgb(51, 51, 51); width: 100%; -webkit-border-radius: 2px; border-radius: 2px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #dadada; box-shadow: inset 0 0 0 1px #dadada; height: 21px; text-align: center;"
            value="#FF0000"
          />
          <label
            for="rc-editable-input-3"
            style="text-transform: uppercase; font-size: 11px; line-height: 11px; color: rgb(150, 150, 150); text-align: center; display: block; margin-top: 12px;"
          >
            hex
          </label>
        </div>
      </div>
    </div>
    <div
      style="width: 32px; text-align: right; position: relative;"
    >
      <div
        style="margin-right: -4px; margin-top: 12px; cursor: pointer; position: relative;"
      >
        <svg
          style="fill: rgb(51, 51, 51); width: 24px; height: 24px; border: 1px solid transparent; -webkit-border-radius: 5px; border-radius: 5px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,18.17L8.83,15L7.42,16.41L12,21L16.59,16.41L15.17,15M12,5.83L15.17,9L16.58,7.59L12,3L7.41,7.59L8.83,9L12,5.83Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChromePointer renders correctly 1`] = `
<DocumentFragment>
  <div
    style="width: 12px; height: 12px; -webkit-border-radius: 6px; border-radius: 6px; -webkit-transform: translate(-6px, -1px); transform: translate(-6px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
  />
</DocumentFragment>
`;

exports[`ChromePointerCircle renders correctly 1`] = `
<DocumentFragment>
  <div
    style="width: 12px; height: 12px; -webkit-border-radius: 6px; border-radius: 6px; -webkit-box-shadow: inset 0 0 0 1px #fff; box-shadow: inset 0 0 0 1px #fff; -webkit-transform: translate(-6px, -6px); transform: translate(-6px, -6px);"
  />
</DocumentFragment>
`;
